--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -34,10 +34,11 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
+        app:backgroundTint="@color/colorAccent"
         app:shapeAppearance="@style/FabDiamondOverlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:tint="@android:color/white"
+        app:tint="@android:color/white"
         app:layout_anchor="@id/bottomAppBar"
         app:fabSize="normal"
         app:srcCompat="@drawable/ic_add" />
