--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3A91F7</color>
-    <color name="colorPrimaryDark">#3A91F7</color>
+    <color name="colorPrimaryDark">@android:color/white</color>
     <color name="colorAccent">#3A91F7</color>
 </resources>
